--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flamengo</title>
+    <title>site do grupo</title>
 </head>
 <body>
-  arrascaeta  
+    <h1>site do grupo</h1>
+      <h2>raiane,suellen,pamela,hyara</h2>
+    <p>
+    <h1>raiane:</h1>
+    faculdade:perita criminal.
+    time:Flamengo.
+    emprego:presidente do flamengo.
+     viajem:rio de janeiro.
+     sonho: ir ao Maracanã 
+    <h1>suellen:</h1>
+    faculdade: ciências contábeis.
+    time> palmeiras.
+    emprego: presidente do palmeiras.
+    viajem:são paulo
+    sonho: ir ao allianz parque
+    <h1>pamela</h1> 
+    faculdade:perita criminal.
+    time:corinthians.
+    emprego:presidente do corinthians.
+    viagem:ir pra barretos
+    sonho:barretão
+    <h1>hyara</h1>
+    faculdade:direito
+    time:corinthians
+    emprego:investigadora
+    viajem:praia
+    sonho:fazer muita faculdade.
+    </p>
 </body>
 </html>
