--- a/index.html
+++ b/index.html
@@ -11,29 +11,37 @@
       <h2>raiane,suellen,pamela,hyara</h2>
     <p>
     <h1>raiane:</h1>
-    faculdade:perita criminal.
-    time:Flamengo.
-    emprego:presidente do flamengo.
-     viajem:rio de janeiro.
-     sonho: ir ao Maracanã 
+    <ul>
+    <li>faculdade:perita criminal.</li>
+    <li>time:Flamengo.</li>
+    <li>emprego:presidente do flamengo.</li>
+    <li>viajem:rio de janeiro.</li>
+    <li>sonho: ir ao Maracanã </li>
+    </ul>
     <h1>suellen:</h1>
-    faculdade: ciências contábeis.
-    time> palmeiras.
-    emprego: presidente do palmeiras.
-    viajem:são paulo
-    sonho: ir ao allianz parque
+    <ul>
+    <li>faculdade: ciências contábeis.</li>
+    <li>time:palmeiras.</li>
+    <li>emprego: presidente do palmeiras.</li>
+    <LI>viajem:são paulo</LI>
+    <li>sonho: ir ao allianz parque</li>
+  </ul>
     <h1>pamela</h1> 
-    faculdade:perita criminal.
-    time:corinthians.
-    emprego:presidente do corinthians.
-    viagem:ir pra barretos
-    sonho:barretão
+    <ul>
+    <li>faculdade:perita criminal.</li>
+    <li>time:corinthians.</li>
+    <li>emprego:presidente do corinthians.</li>
+    <li>viagem:ir pra barretos</li>
+    <li>sonho:barretão</li>
+  </ul>
     <h1>hyara</h1>
-    faculdade:direito
-    time:corinthians
-    emprego:investigadora
-    viajem:praia
-    sonho:fazer muita faculdade.
+    <ul>
+    <li>faculdade:direito</li>
+    <li>time:corinthians</li>
+    <li>emprego:investigadora</li>
+    <li>viajem:ir pra BC</li>
+    <li>sonho:fazer muita faculdade.</li>
+  </ul>
     </p>
 </body>
 </html>
