--- a/index.html
+++ b/index.html
@@ -43,6 +43,45 @@
     <li>sonho:fazer muita faculdade.</li>
   </ul>
     </p>
-    
+    <p>
+      <h3>Horário:</h3>
+<table>
+  <tr>
+<td>Horário</td>
+<td>Segunda</td>
+<td>Terça</td>
+<td>Quarta</td>
+<td>Quinta</td>
+<td>Sexta</td>
+<td>Tarde</td>
+ </tr>
+ <tr>
+<td>07h35</td>
+<td>biologia</td>
+<td>pensamento c.</td>
+<td>filo.</td>
+<td>ed, financeira</td>
+<td>química</td>
+<td>artes</td>
+  </tr>
+  <tr>
+<td>08h25</td>
+<td>inglês</td>
+<td>pens. comp.</td>
+<td>filo.</td>
+<td>história</td>
+<td>química</td>
+<td>matematica</td>
+</tr>
+<tr>
+<td>09h15</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</table>
+    </p>
 </body>
 </html>
