--- a/index.html
+++ b/index.html
@@ -75,12 +75,31 @@
 </tr>
 <tr>
 <td>09h15</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
+<td>história</td>
+<td>ed. física</td>
+<td>ed. financeira</td>
+<td>física</td>
+<td>matemática</td>
+ <td>física</td>
 </tr>
+<tr>
+<td>10h20</td>
+<td>projeto de vd</td>
+<td>inglês</td>
+<td>geografia</td>
+<td>artes</td>
+<td>biologia</td>
+<td>português</td>
+    </tr>
+    <tr>
+<td>11h10</td>
+<td>projeto de vd</td>
+<td>matemática</td>
+<td>geografia</td>
+<td>português</td>
+<td>português</td>
+<td>ed. física</td>
+    </tr>
 </table>
     </p>
 </body>
