--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=" stylesheet" href="style.css">
     <title>site do grupo</title>
 </head>
 <body>
     <h1>site do grupo</h1>
+    <div class="raiane, suellen, pamela, hyar">
       <h2>raiane,suellen,pamela,hyara</h2>
     <p>
+    <div class="raiane"> 
     <h1>raiane:</h1>
     <ul>
     <li>faculdade:perita criminal.</li>
@@ -18,7 +21,8 @@
     <li>viajem:rio de janeiro.</li>
     <li>sonho: ir ao Maracanã </li>
     </ul>
-    <h1>suellen:</h1>
+  </div>
+     <h1>suellen:</h1>
     <ul>
     <li>faculdade: ciências contábeis.</li>
     <li>time:palmeiras.</li>
@@ -26,6 +30,7 @@
     <LI>viajem:são paulo</LI>
     <li>sonho: ir ao allianz parque</li>
   </ul>
+
     <h1>pamela</h1> 
     <ul>
     <li>faculdade:perita criminal.</li>
@@ -34,7 +39,7 @@
     <li>viagem:ir pra barretos</li>
     <li>sonho:barretão</li>
   </ul>
-    <h1>hyara</h1>
+ <h1>hyara</h1>
     <ul>
     <li>faculdade:direito</li>
     <li>time:corinthians</li>
@@ -42,8 +47,10 @@
     <li>viajem:ir pra BC</li>
     <li>sonho:fazer muita faculdade.</li>
   </ul>
+
     </p>
     <p>
+      <div class="horário">
       <h3>Horário:</h3>
 <table>
   <tr>
@@ -64,7 +71,7 @@
 <td>química</td>
 <td>artes</td>
   </tr>
-  <tr>
+<tr>
 <td>08h25</td>
 <td>inglês</td>
 <td>pens. comp.</td>
@@ -100,7 +107,8 @@
 <td>português</td>
 <td>ed. física</td>
     </tr>
-</table>
+   </table>
     </p>
+    <img src="images.jpeg" alt="símbolo da camiseta do flamengo">
 </body>
 </html>
